# MCP_statscan

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  smithery.yaml
statscan_mcp/: __init__.py  __main__.py  config.py  server.py
statscan_mcp/models/: __init__.py
statscan_mcp/providers/: __init__.py  wds_client.py
statscan_mcp/tools/: __init__.py  get_bulk_vectors.py  get_changed_cubes.py  get_changed_series.py  get_changed_series_data.py  get_changed_vector_data.py  get_cube_metadata.py  get_full_table_csv.py  get_full_table_sdmx.py  get_series_by_vector.py  get_series_info.py  get_table.py  get_vector_data_by_range.py  get_vector_info.py  get_vectors_latest.py  list_cubes.py  list_cubes_full.py
tests/: test_server.py  test_tools.py  test_wds_client.py
