[project]
name = "statscan-mcp"
version = "1.0.0"
description = "Unofficial MCP server for Statistics Canada datasets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "statistics-canada", "statscan", "data", "api"]

dependencies = [
    "mcp[cli]>=1.22.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
statscan-mcp = "statscan_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["statscan_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
